# Scheduling

./: .env.example  .gitignore  CLAUDE.md  README.md  index.md  pyproject.toml
.claude/agents/: planner.md
.github/workflows/: deploy.yml
.planning/: STATE.md
data/: Teachers.xlsx  sparksource-schedules.md  teacher-schedule-esa_lausanne.json  teacher-schedule-private_english_lausanne-detailed.json  teacher-schedule-private_french_lausanne-detailed.json  teacher-schedule-private_german_lausanne-detailed.json  teacher-schedule-sfs_lausanne.json  teachers.json
deploy/: vps-setup.sh
docs/: azure.md  deployment.md  scripts.md  setup.md  sync-architecture.md
memory/: .last-dream  MEMORY.md
scripts/: config.py  deploy_webhook.py  diff_sync.py  notify.py  parse_teachers.py  provision_teachers.py  reconcile.py  run_full_sync.sh  scrape_schedules.py  sync_calendars.py  sync_method.sh  sync_private_calendars.py  sync_vip.sh  tenant_recon.py  tenant_review.py  test_week_nav.py
src/scraper/: __init__.py  config.py  errors.py  logging.py  models.py  session.py  utils.py
src/scraper/pages/: __init__.py  schedule.py
tests/: test_diff_sync.py
